--- a/webserver/ui/public/css/site/index.css
+++ b/webserver/ui/public/css/site/index.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 50px;
+    padding-top: 0px;
     padding-bottom: 20px;
 }
 
@@ -10,4 +10,5 @@ body {
 
 .btn-group-wrap {
     text-align: center;
+    padding-bottom: 20px;
 }
